Help pages style sheet modified and ProductSceneImage.java modified

--- a/snap-help/src/main/resources/org/esa/snap/snap/help/docs/style.css
+++ b/snap-help/src/main/resources/org/esa/snap/snap/help/docs/style.css
@@ -172,6 +172,55 @@ table.header {
     white-space: nowrap;
 }
 
+.headerMain {
+    font-size: 20;
+    height: 29;
+    color: #000000;
+    vertical-align: middle;
+    background-color: #ffffff;
+    border-width: 0;
+    padding: 0;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    white-space: nowrap;
+}
+
+.headerTop {
+    font-size: 8;
+    height: 10;
+    color: #ffffff;
+    vertical-align: middle;
+    background-color: #000000;
+    border-width: 0;
+    padding: 0;
+    white-space: nowrap;
+}
+
+.headerBottom {
+    font-size: 6;
+    height: 6;
+    color: #ffffff;
+    vertical-align: middle;
+    background-color: #CAD6E2;
+    border-width: 0;
+    padding: 0;
+    white-space: nowrap;
+}
+
+
+.intro {
+    font-size: 12;
+    color: #000000;
+    vertical-align: top;
+    background-color: #ffffff;
+    border-width: 0;
+    padding: 0;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    white-space: wrap;
+}
+
+
 hr {
     height: 4;
     color: #000063;
